--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^1.2.1",
-    "lucide-react": "0.105.0-alpha.4",
+    "clsx": "^2.0.0",
+    "lucide-react": "0.292.0",
     "next": "^14.0.3",
     "next-themes": "^0.2.1",
     "nextjs": "^0.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sharp": "^0.31.3",
+    "sharp": "^0.32.6",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7"
   },
